tools/flowc/tests/errors/error24.flow
Foo(v : ?);

Bar(a : Foo<unknown>);
